k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: express
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 3001
      targetPort: 3001
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30001
