k8s/express.yml
apiVersion: v1
kind: Namespace
metadata:
  name: express
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-deployment
  namespace: express
  labels:
    app: express
spec:
  replicas: 3
  selector:
    matchLabels:
      app: express
  template:
    metadata:
      labels:
        app: express
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-192-168-4-254
#      affinity:
#        podAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#          - labelSelector:
#              matchExpressions:
#              - key: app
#                operator: In
#                values:
#                - express
#            topologyKey: kubernetes.io/hostname
      containers:
      - name: express
        image: "192.168.11.51:5000/express:1.0.2"
        ports:
        - containerPort: 3001
        volumeMounts:
        - name: logs
          mountPath: /var/www/logs
      volumes:
      - name: logs
        persistentVolumeClaim:
          claimName: pvc-express
---
apiVersion: v1
kind: Service
metadata:
  name: express-service
  namespace: express
spec:
  type: ClusterIP
  selector:
    app: express
  ports:
    # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 3001
      targetPort: 3001
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      # nodePort: 30001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-ingress
  namespace: express
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: express-ingress-class
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: express-service
                port:
                  number: 3001
